add footer for tablet

--- a/index.html
+++ b/index.html
@@ -132,56 +132,61 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <h2 class="footer__title">Get in Touch</h2>
-      <a href="http://www.instagram.com"
-        ><img
-          class="footer__icon"
-          src="./assets/icons/icon-instagram.svg"
-          alt="Instagram"
-      /></a>
-      <a href="http://www.facebook.com"
-        ><img
-          class="footer__icon"
-          src="./assets/icons/icon-facebook.svg"
-          alt="Facebook"
-      /></a>
-      <a href="http://www.twitter.com"
-        ><img src="./assets/icons/icon-twitter.svg" alt="Twitter"
-      /></a>
+      <div class="footer__container">
+        <h2 class="footer__title">Get in Touch</h2>
+        <a href="http://www.instagram.com"
+          ><img
+            class="footer__icon"
+            src="./assets/icons/icon-instagram.svg"
+            alt="Instagram"
+        /></a>
+        <a href="http://www.facebook.com"
+          ><img
+            class="footer__icon"
+            src="./assets/icons/icon-facebook.svg"
+            alt="Facebook"
+        /></a>
+        <a href="http://www.twitter.com"
+          ><img src="./assets/icons/icon-twitter.svg" alt="Twitter"
+        /></a>
+      </div>
 
-      <div class="footer__contact">
-        <p class="footer__text">
-          Cam Adams <br />
-          Bees Knees Management
-        </p>
-        <p class="footer__text">
-          503 Broadway Penthouse, <br />
-          New York, NY 10012, USA
-        </p>
-        <p class="footer__text">info@thebeesknees.com</p>
+      <div class="footer__contact-container">
+        <div class="footer__contact">
+          <p class="footer__text footer__text--title">
+            Cam Adams <br />
+            Bees Knees Management
+          </p>
+          <p class="footer__text">
+            503 Broadway Penthouse, <br />
+            New York, NY 10012, USA
+          </p>
+          <p class="footer__text">info@thebeesknees.com</p>
+        </div>
+        <div class="footer__contact">
+          <p class="footer__text footer__text--title">
+            Pearl Gregg <br />
+            Limitless Artist Group
+          </p>
+          <p class="footer__text">
+            Booking Agent for <br />
+            US / South America / Japan
+          </p>
+          <p class="footer__text">pearl.gregg@limitlessag.com</p>
+        </div>
+        <div class="footer__contact">
+          <p class="footer__text footer__text--title">
+            Carson Whyte <br />
+            ARCH Entertainment
+          </p>
+          <p class="footer__text">
+            Booking Agent for <br />
+            UK / EU / AU
+          </p>
+          <p class="footer__text">cwhyte@archentertainment.com</p>
+        </div>
       </div>
-      <div class="footer__contact">
-        <p class="footer__text">
-          Pearl Gregg <br />
-          Limitless Artist Group
-        </p>
-        <p class="footer__text">
-          Booking Agent for <br />
-          US / South America / Japan
-        </p>
-        <p class="footer__text">pearl.gregg@limitlessag.com</p>
-      </div>
-      <div class="footer__contact">
-        <p class="footer__text">
-          Carson Whyte <br />
-          ARCH Entertainment
-        </p>
-        <p class="footer__text">
-          Booking Agent for <br />
-          UK / EU / AU
-        </p>
-        <p class="footer__text">cwhyte@archentertainment.com</p>
-      </div>
+
       <img
         class="footer__logo"
         src="./assets/logos/Logo-bandsite.svg"
