add diving deeper functionalities

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- Header Component -->
     <header class="header">
       <div class="header__logo">
-        <a href="./index.html">
-          <img src="./assets/logos/Logo-bandsite.svg" alt="logo"
+        <a href="./index.html"
+          ><img src="./assets/logos/Logo-bandsite.svg" alt="logo"
         /></a>
       </div>
       <nav class="header__navigation">
@@ -134,19 +134,28 @@
     <footer class="footer">
       <div class="footer__container">
         <h2 class="footer__title">Get in Touch</h2>
-        <a href="http://www.instagram.com"
+        <a
+          href="http://www.instagram.com"
+          target="_blank"
+          rel="noopener noreferrer"
           ><img
             class="footer__icon"
             src="./assets/icons/icon-instagram.svg"
             alt="Instagram"
         /></a>
-        <a href="http://www.facebook.com"
+        <a
+          href="http://www.facebook.com"
+          target="_blank"
+          rel="noopener noreferrer"
           ><img
             class="footer__icon"
             src="./assets/icons/icon-facebook.svg"
             alt="Facebook"
         /></a>
-        <a href="http://www.twitter.com"
+        <a
+          href="http://www.twitter.com"
+          target="_blank"
+          rel="noopener noreferrer"
           ><img src="./assets/icons/icon-twitter.svg" alt="Twitter"
         /></a>
       </div>
@@ -161,7 +170,11 @@
             503 Broadway Penthouse, <br />
             New York, NY 10012, USA
           </p>
-          <p class="footer__text">info@thebeesknees.com</p>
+          <p class="footer__text">
+            <a class="footer__text" href="mailto:info@thebeesknees.com"
+              >info@thebeesknees.com</a
+            >
+          </p>
         </div>
         <div class="footer__contact">
           <p class="footer__text footer__text--title">
@@ -172,7 +185,11 @@
             Booking Agent for <br />
             US / South America / Japan
           </p>
-          <p class="footer__text">pearl.gregg@limitlessag.com</p>
+          <p class="footer__text">
+            <a class="footer__text" href="mailto:pearl.gregg@limitlessag.com"
+              >pearl.gregg@limitlessag.com</a
+            >
+          </p>
         </div>
         <div class="footer__contact">
           <p class="footer__text footer__text--title">
@@ -183,7 +200,11 @@
             Booking Agent for <br />
             UK / EU / AU
           </p>
-          <p class="footer__text">cwhyte@archentertainment.com</p>
+          <p class="footer__text">
+            <a class="footer__text" href="mailto:cwhyte@archentertainment.com"
+              >cwhyte@archentertainment.com</a
+            >
+          </p>
         </div>
       </div>
 
