--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
         <ul class="header__menu">
           <li class="header__menu-item">
             <a
-              href="#"
+              href="./index.html"
               class="header__menu-item-link header__menu-item-link--active"
               >Biography</a
             >
           </li>
           <li class="header__menu-item">
-            <a href="#" class="header__menu-item-link">Shows</a>
+            <a href="./pages/shows.html" class="header__menu-item-link"
+              >Shows</a
+            >
           </li>
         </ul>
       </nav>
