add shows page tablet size

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -35,7 +35,7 @@
     <!-- Main Content -->
     <main class="main-content">
       <div class="hero">
-        <h2 class="hero__subtitle">Beautiful Beast Album</h2>
+        <h2 class="hero__subtitle">Beautiful Beasts Album</h2>
         <h1 class="hero__title">Queen of Yellow x For The Stings</h1>
         <iframe
           class="hero__iframe"
@@ -58,11 +58,101 @@
           <p class="ticket__text">San Francisco, CA</p>
           <a class="ticket__button" href="#">BUY TICKETS</a>
         </article>
+        <hr class="ticket__divider" />
       </section> -->
       <!-- Shows -->
     </main>
-
     <!-- Main Content -->
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer__container">
+        <h2 class="footer__title">Get in Touch</h2>
+        <a
+          href="http://www.instagram.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img
+            class="footer__icon"
+            src="../assets/icons/Icon-instagram.svg"
+            alt="Instagram"
+        /></a>
+        <a
+          href="http://www.facebook.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img
+            class="footer__icon"
+            src="../assets/icons/icon-facebook.svg"
+            alt="Facebook"
+        /></a>
+        <a
+          href="http://www.twitter.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img src="../assets/icons/icon-twitter.svg" alt="Twitter"
+        /></a>
+      </div>
+
+      <div class="footer__contact-container">
+        <div class="footer__contact">
+          <p class="footer__text footer__text--title">
+            Cam Adams <br />
+            Bees Knees Management
+          </p>
+          <p class="footer__text">
+            503 Broadway Penthouse, <br />
+            New York, NY 10012, USA
+          </p>
+          <p class="footer__text">
+            <a class="footer__text" href="mailto:info@thebeesknees.com"
+              >info@thebeesknees.com</a
+            >
+          </p>
+        </div>
+        <div class="footer__contact">
+          <p class="footer__text footer__text--title">
+            Pearl Gregg <br />
+            Limitless Artist Group
+          </p>
+          <p class="footer__text">
+            Booking Agent for <br />
+            US / South America / Japan
+          </p>
+          <p class="footer__text">
+            <a class="footer__text" href="mailto:pearl.gregg@limitlessag.com"
+              >pearl.gregg@limitlessag.com</a
+            >
+          </p>
+        </div>
+        <div class="footer__contact">
+          <p class="footer__text footer__text--title">
+            Carson Whyte <br />
+            ARCH Entertainment
+          </p>
+          <p class="footer__text">
+            Booking Agent for <br />
+            UK / EU / AU
+          </p>
+          <p class="footer__text">
+            <a class="footer__text" href="mailto:cwhyte@archentertainment.com"
+              >cwhyte@archentertainment.com</a
+            >
+          </p>
+        </div>
+      </div>
+
+      <img
+        class="footer__logo"
+        src="../assets/logos/Logo-bandsite.svg"
+        alt="logo"
+      />
+      <p class="footer__text">
+        Copyright The Bees Knees &copy; 2021 All Rights Reserved
+      </p>
+    </footer>
+    <!-- Footer -->
+
     <script src="../scripts/build-shows-page.js"></script>
   </body>
 </html>
