add headers to show tablet size

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -49,6 +49,12 @@
       <!-- Shows -->
       <!-- <section class="show">
         <h2 class="show__title">Shows</h2>
+        <div class="show__headers">
+          <h3 class="show__headers-item">DATE</h3>
+          <h3 class="show__headers-item">VENUE</h3>
+          <h3 class="show__headers-item">LOCATION</h3>
+          <h3 class="show__headers-item"></h3>
+        </div>
         <article class="ticket">
           <p class="ticket__title">DATE</p>
           <p class="ticket__text ticket__text--strong">Mon Sept 06 2021</p>
