--- a/pages/shows.html
+++ b/pages/shows.html
@@ -35,8 +35,10 @@
     <!-- Main Content -->
     <main class="main-content">
       <div class="hero">
-        <h2 class="hero__subtitle">Beautiful Beasts Album</h2>
-        <h1 class="hero__title">Queen of Yellow x For The Stings</h1>
+        <div class="hero__title-container">
+          <h2 class="hero__subtitle">Beautiful Beasts Album</h2>
+          <h1 class="hero__title">Queen of Yellow x For The Stings</h1>
+        </div>
         <iframe
           class="hero__iframe"
           scrolling="no"
@@ -49,22 +51,25 @@
       <!-- Shows -->
       <!-- <section class="show">
         <h2 class="show__title">Shows</h2>
-        <div class="show__headers">
-          <h3 class="show__headers-item">DATE</h3>
-          <h3 class="show__headers-item">VENUE</h3>
-          <h3 class="show__headers-item">LOCATION</h3>
-          <h3 class="show__headers-item"></h3>
+
+        <div class="show__container">
+          <div class="show__headers">
+            <h3 class="show__headers-item">DATE</h3>
+            <h3 class="show__headers-item">VENUE</h3>
+            <h3 class="show__headers-item">LOCATION</h3>
+            <h3 class="show__headers-item"></h3>
+          </div>
+          <article class="ticket">
+            <p class="ticket__title">DATE</p>
+            <p class="ticket__text ticket__text--strong">Mon Sept 06 2021</p>
+            <p class="ticket__title">VENUE</p>
+            <p class="ticket__text">Ronald Lane</p>
+            <p class="ticket__title">LOCATION</p>
+            <p class="ticket__text">San Francisco, CA</p>
+            <a class="ticket__button" href="#">BUY TICKETS</a>
+          </article>
+          <hr class="ticket__divider" />
         </div>
-        <article class="ticket">
-          <p class="ticket__title">DATE</p>
-          <p class="ticket__text ticket__text--strong">Mon Sept 06 2021</p>
-          <p class="ticket__title">VENUE</p>
-          <p class="ticket__text">Ronald Lane</p>
-          <p class="ticket__title">LOCATION</p>
-          <p class="ticket__text">San Francisco, CA</p>
-          <a class="ticket__button" href="#">BUY TICKETS</a>
-        </article>
-        <hr class="ticket__divider" />
       </section> -->
       <!-- Shows -->
     </main>
