--- a/pages/shows.html
+++ b/pages/shows.html
@@ -61,7 +61,7 @@
           </div>
           <article class="ticket">
             <p class="ticket__title">DATE</p>
-            <p class="ticket__text ticket__text--strong">Mon Sept 06 2021</p>
+            <p class="ticket__text ticket__text-strong">Mon Sept 06 2021</p>
             <p class="ticket__title">VENUE</p>
             <p class="ticket__text">Ronald Lane</p>
             <p class="ticket__title">LOCATION</p>
@@ -85,7 +85,7 @@
           rel="noopener noreferrer"
           ><img
             class="footer__icon"
-            src="../assets/icons/Icon-instagram.svg"
+            src="../assets/icons/icon-instagram.svg"
             alt="Instagram"
         /></a>
         <a
@@ -107,14 +107,14 @@
 
       <div class="footer__contact-container">
         <div class="footer__contact">
-          <p class="footer__text footer__text--title">
-            Cam Adams <br />
-            Bees Knees Management
+          <p class="footer__text footer__text-title">Cam Adams</p>
+          <p class="footer__text footer__text-title">
+            The Bees Knees Management
           </p>
-          <p class="footer__text">
-            503 Broadway Penthouse, <br />
-            New York, NY 10012, USA
-          </p>
+          <p class="footer__spacing"></p>
+          <p class="footer__text">503 Broadway Penthouse,</p>
+          <p class="footer__text">New York, NY 10012, USA</p>
+          <p class="footer__spacing"></p>
           <p class="footer__text">
             <a class="footer__text" href="mailto:info@thebeesknees.com"
               >info@thebeesknees.com</a
@@ -122,14 +122,12 @@
           </p>
         </div>
         <div class="footer__contact">
-          <p class="footer__text footer__text--title">
-            Pearl Gregg <br />
-            Limitless Artist Group
-          </p>
-          <p class="footer__text">
-            Booking Agent for <br />
-            US / South America / Japan
-          </p>
+          <p class="footer__text footer__text-title">Pearl Gregg</p>
+          <p class="footer__text footer__text-title">Limitless Artist Group</p>
+          <p class="footer__spacing"></p>
+          <p class="footer__text">Booking Agent for</p>
+          <p class="footer__text">US / South America / Japan</p>
+          <p class="footer__spacing"></p>
           <p class="footer__text">
             <a class="footer__text" href="mailto:pearl.gregg@limitlessag.com"
               >pearl.gregg@limitlessag.com</a
@@ -137,14 +135,12 @@
           </p>
         </div>
         <div class="footer__contact">
-          <p class="footer__text footer__text--title">
-            Carson Whyte <br />
-            ARCH Entertainment
-          </p>
-          <p class="footer__text">
-            Booking Agent for <br />
-            UK / EU / AU
-          </p>
+          <p class="footer__text footer__text-title">Carson Whyte</p>
+          <p class="footer__text footer__text-title">ARCH Entertainment</p>
+          <p class="footer__spacing"></p>
+          <p class="footer__text">Booking Agent for</p>
+          <p class="footer__text">UK / EU / AU</p>
+          <p class="footer__spacing"></p>
           <p class="footer__text">
             <a class="footer__text" href="mailto:cwhyte@archentertainment.com"
               >cwhyte@archentertainment.com</a
@@ -153,11 +149,12 @@
         </div>
       </div>
 
-      <img
-        class="footer__logo"
-        src="../assets/logos/Logo-bandsite.svg"
-        alt="logo"
-      />
+      <a href="../index.html"
+        ><img
+          class="footer__logo"
+          src="../assets/logos/Logo-bandsite.svg"
+          alt="logo"
+      /></a>
       <p class="footer__text">
         Copyright The Bees Knees &copy; 2021 All Rights Reserved
       </p>
