remove unused code from files to merge to main

--- a/index.html
+++ b/index.html
@@ -161,30 +161,7 @@
             </div>
           </div>
           <hr class="comment__divider" />
-          <div class="comment__list">
-            <!-- template for javascript createElement -->
-            <!-- <article class="comment__item">
-            <div class="comment__container">
-              <div class="comment__left">
-                <div class="comment__avatar"></div>
-              </div>
-              <div class="comment__right">
-                <div class="comment__group-container">
-                  <p class="comment__name">Lucas Lu</p>
-                  <p class="comment__date">10/21/2022</p>
-                </div>
-                <p class="comment__text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Maxime laudantium autem itaque, ea nam veritatis eaque
-                  suscipit atque tempora reiciendis dicta quisquam, laboriosam
-                  doloremque. Atque nam eligendi doloribus natus adipisci.
-                </p>
-              </div>
-            </div>
-          </article>
-          <hr class="comment__divider" /> -->
-            <!-- template for javascript createElement -->
-          </div>
+          <div class="comment__list"></div>
         </div>
       </section>
     </main>
