--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
       </p>
     </footer>
     <!-- Footer -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./scripts/index-page.js"></script>
   </body>
 </html>
