--- a/pages/shows.html
+++ b/pages/shows.html
@@ -135,7 +135,7 @@
       </p>
     </footer>
     <!-- Footer -->
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../scripts/build-shows-page.js"></script>
   </body>
 </html>
